templates/serviceColor.yaml
apiVersion: v1
kind: Service
metadata:
   name: my-color
spec:
   selector:
     app: simple-webapp-color
   ports:
   - protocol: TCP
     port: 80
     targetPort: 80
