templates/ingressColor.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
 annotations:
   cert-manager.io/cluster-issuer: letsencrypt-prod
 name: my-color
spec:
   ingressClassName: simple-webapp-color
   rules:
     - host: antamoryfall.color.horizon-workspaces.com
       http:
        paths:
         - backend:
            service:
              name: my-color
              port:
               number: 80
           path:  /
           pathType:  ImplementationSpecific
   tls:
     - hosts:
         - antamoryfall.color.horizon-workspaces.com
       secretName: antamoryfall-simple-webapp-color-tls
